--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,5 @@
 streamlit
 pandas
-yfinance
 gspread
-oauth2client
 google-auth
-google-auth-oauthlib
-google-auth-httplib2
-google-api-python-client
-forex-python
+requests
