--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,6 +1,4 @@
-[theme]
-primaryColor="#0d6efd"
-backgroundColor="#ffffff"
-secondaryBackgroundColor="#f0f2f6"
-textColor="#000000"
-font="sans serif"
+[server]
+headless = true
+enableCORS = false
+port = 8501
