--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,8 @@
-# Python
 __pycache__/
-*.py[cod]
+*.pyc
+*.pyo
+*.pyd
+.env
 *.env
-
-# Streamlit secrets
-.secrets.toml
-
-# Mac
-.DS_Store
+credentials.json
+.secrets/
